--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,10 @@ a:hover {
   color: var(--color3);
 }
 
+nav {
+  box-shadow: -12px -15px 21px var(--color7)
+}
+
  .navbar {
   display: flex;
   background-color: var(--color1);
